# fastapi_rag_templete

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml
demo-app/: .env.example  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
demo-app/alembic/: env.py
demo-app/app/: main.py
demo-app/app/api/v1/: auth.py
demo-app/app/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py
demo-app/app/db/: base.py  session.py
demo-app/app/db/models/: document.py
demo-app/app/db/repositories/: conversation_repository.py
demo-app/app/modules/agents/: agent_manager.py  base.py
demo-app/app/modules/agents/implementations/: sql_agent.py
demo-app/app/observability/: metrics.py  tracing.py
demo-app/app/providers/cache/: base.py  memory.py  redis.py
demo-app/app/providers/database/: __init__.py  base.py
demo-app/app/providers/llm/: echo.py  ollama.py
demo-app/app/providers/queues/: __init__.py  celery.py  memory.py
demo-app/app/providers/vectorstores/: base.py  memory.py  pgvector.py  pinecone.py  qdrant.py
demo-app/app/schemas/: rag.py
demo-app/app/services/: auth.py  chunking.py  parsing.py  redis.py
demo-app/app/workers/tasks/: rag.py
demo-app/docs/: ARCHITECTURE.md  FIRST_FEATURE.md  USER_GUIDE.md
demo-app/tests/: test_auth.py  test_health.py  test_rag.py  test_vectorstores.py
docs/: ARCHITECTURE.md  FIRST_FEATURE.md  PUBLISHING.md  USER_GUIDE.md
sampleapp/: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sampleapp/alembic/versions/: 0001_create_users.py
sampleapp/app/api/: __init__.py
sampleapp/app/api/v1/: __init__.py  agents.py  chat.py  health.py  rag.py
sampleapp/app/core/: config.py  security.py
sampleapp/app/db/models/: __init__.py  conversation.py  user.py
sampleapp/app/db/repositories/: __init__.py  document_repository.py  user_repository.py
sampleapp/app/modules/agents/: orchestrator.py
sampleapp/app/modules/rag/: pipeline.py
sampleapp/app/providers/: __init__.py
sampleapp/app/providers/cache/: __init__.py  dragonfly.py  factory.py
sampleapp/app/providers/database/: factory.py  sqlalchemy.py
sampleapp/app/providers/llm/: __init__.py  base.py  factory.py  openai.py
sampleapp/app/providers/queues/: base.py  factory.py
sampleapp/app/providers/vectorstores/: __init__.py  chroma.py  factory.py
sampleapp/app/schemas/: auth.py  document.py
sampleapp/app/services/: embeddings.py
sampleapp/app/workers/: celery_app.py
sampleapp/docs/: ARCHITECTURE.md  USER_GUIDE.md
sampleapp/tests/: conftest.py  test_metrics.py
src/fastapi_rag/: template.meta.json
src/fastapi_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fastapi_rag/cli/: __init__.py  main.py
src/fastapi_rag/generators/: __init__.py  project_generator.py
src/fastapi_rag/renderer/: __init__.py  jinja_renderer.py
src/fastapi_rag/templates/full_rag/: .env.example  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  template.meta.json
src/fastapi_rag/utils/: __init__.py  package_resources.py
tests/: test_cli.py  test_renderer.py
(+83 files in other folders)
